added more uniti tests